aggiunta visualizzione di tutti  i dischi

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,4 +1,6 @@
 $bg-color: #1e2d3b;
 $main-color: #2e3a46;
+$title-color: #fff;
+$p-color: rgb(105, 108, 119);
 
 $main-font: "Montserrat", sans-serif;
